# log-analyzer

./: .gitignore  Makefile  README.md  draf-makefile.txt  main.py  pyproject.toml
config/clickhouse/: config.xml  config.xml.bak  init.sql  init.sql.bak  users.xml
config/postgres/: init.sql
config/qdrant/: init.py
documentation/: API_DOCUMENTATION.md  README.md  SCHEMA_ENHANCEMENT_SUMMARY.md  TABLE_OWNERSHIP.md  kafka-transaction-patterns-dont-delete.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  mock.ts  types.ts
frontend/src/components/charts/: MainChart.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: MetricCard.tsx
frontend/src/pages/: Anomalies.tsx  LogStream.tsx  Overview.tsx  Reports.tsx  SemanticSearch.tsx  Topology.tsx
infrastructure/: docker-compose.yml
services/api/: Dockerfile  requirements.txt
services/api/src/: __init__.py  app.py
services/api/src/routers/: __init__.py  anomalies.py  config.py  logs.py  metrics.py  patterns.py  reports.py  search.py  summary.py  websocket.py  zscore.py
services/api/src/services/: __init__.py  cache.py  database.py  qdrant_service.py
services/api/src/settings/: logging_setting.py
services/jina-embeddings/: Dockerfile  app.py  pyproject.toml  requirements.txt
services/jina-embeddings/src/: app.py
services/kafka-consumer/: Dockerfile  app.py  pyproject.toml  requirements.txt
services/kafka-consumer/src/: app.py
services/llm-analyzer/: Dockerfile  app.py  pyproject.toml  requirements.txt
services/llm-analyzer/src/: anomaly_baselines.py  app.py
services/log-generator/: Dockerfile  app.py  pyproject.toml  requirements.txt
services/log-generator/src/: app.py
services/vectorization-worker/: Dockerfile  pyproject.toml  requirements.txt
services/vectorization-worker/src/: app.py
(+8 files in other folders)
