[project]
name = "log-analyzer-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "clickhouse-connect==0.8.14",
    "clickhouse-sqlalchemy==0.3.0",
    "confluent-kafka==2.3.0",
    "faker==33.1.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "numpy==1.26.4",
    "prometheus-client==0.19.0",
    "psycopg2-binary==2.9.10",
    "pybreaker==1.2.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "qdrant-client==1.7.0",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "structlog==23.2.0",
    "tenacity==8.2.3",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
]

#[tool.uv.source] # shared local module that can be imported by workspaces
#core = { workspace = true }

[tool.uv.workspace]
members = [
    "services/kafka-consumer",
    "services/llm-analyzer",
    "services/log-generator",
    "services/jina-embeddings",
    "services/vectorization-worker",
]
